--- a/users-list.html
+++ b/users-list.html
@@ -101,16 +101,16 @@
                         <div class="flex flex-col">
                             <div class="-my-2 overflow-x-auto sm:-mx-6 lg:-mx-8">
                                 <div class="my-2 flex py-2 align-middle inline-block min-w-full sm:px-6 lg:px-8">
-                                    <div class="block relative">
+                                    <div class="block md:w-3/4 lg:w-1/2 relative">
                                         <span class="h-full absolute inset-y-0 left-0 flex items-center pl-2">
                                             <svg viewBox="0 0 24 24" class="h-4 w-4 fill-current text-gray-500">
                                                 <path d="M10 4a6 6 0 100 12 6 6 0 000-12zm-8 6a8 8 0 1114.32 4.906l5.387 5.387a1 1 0 01-1.414 1.414l-5.387-5.387A8 8 0 012 10z">
                                                 </path>
                                             </svg>
                                         </span>
-                                        <input placeholder="Search" class="appearance-none border border-r-0 border-gray-300 border-b block pl-8 pr-6 py-2 w-full bg-white text-sm placeholder-gray-400 text-gray-700 focus:bg-white focus:placeholder-gray-600 focus:text-gray-700 focus:outline-none" />
+                                        <input placeholder="Search" class="appearance-none border border-gray-300 border-b block pl-8 pr-6 py-2 w-full bg-white text-sm placeholder-gray-400 text-gray-700 focus:bg-white focus:placeholder-gray-600 focus:text-gray-700 focus:outline-none" />
                                     </div>
-                                    <div class="block relative">
+                                    <!-- <div class="block relative">
                                         <span class="h-full absolute inset-y-0 left-0 flex items-center pl-2">
                                             <svg class="h-4 w-4 text-gray-500" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
                                                 stroke="currentColor">
@@ -127,7 +127,7 @@
                                             </svg>
                                         </span>
                                         <input placeholder="End Date" class="appearance-none rounded-r border border-gray-300 border-b block pl-8 pr-6 py-2 w-full bg-white text-sm placeholder-gray-400 text-gray-700 focus:bg-white focus:placeholder-gray-600 focus:text-gray-700 focus:outline-none" />
-                                    </div>
+                                    </div> -->
                                 </div>
                                 <div class="py-2 align-middle inline-block min-w-full sm:px-6 lg:px-8">
                                     <div class="shadow overflow-hidden border-b border-gray-200 sm:rounded-lg">
